--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,20 +4,17 @@
     <title>HelloDave.com - come say hi!</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:500,600,700|Permanent+Marker" rel="stylesheet">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= yield :head_block %>
   </head>
 
   <body>
+    <%= render partial: 'layouts/nav' %>
     <%= yield %>
-    <nav class="main">
-      <div class="content-wrapper">
-        <%= link_to "My work", work_index_path, class: 'nav-link' %>
-        <%= link_to "About me", "#", class: 'nav-link' %>
-        <%= link_to "Contact", "#", class: 'nav-link' %>
-      </div>
-    </nav>
+    <%= yield :bottom_of_page %>
   </body>
 </html>
