slowed down ms daisy

--- a/app/assets/stylesheets/_mixins.sass
+++ b/app/assets/stylesheets/_mixins.sass
@@ -57,22 +57,26 @@ $red: #C72030
 
 
 @-moz-keyframes spin
-  from 
+  0% 
     -moz-transform: rotate(0deg)
-  to 
-    -moz-transform: rotate(359deg)
+  50% 
+    -moz-transform: rotate(35deg)
+  0% 
+    -moz-transform: rotate(0deg)
 
 @-webkit-keyframes spin
-  from 
+  0% 
     -webkit-transform: rotate(0deg)
-  to 
-    -webkit-transform: rotate(359deg)
+  50% 
+    -webkit-transform: rotate(35deg)
+  0% 
+    -webkit-transform: rotate(0deg)
 
 @keyframes spin
   0% 
     transform: rotate(0deg)
   50% 
-    transform: rotate(90deg)
+    transform: rotate(35deg)
   0% 
     transform: rotate(0deg)
 
