--- a/app/views/work/index.html.erb
+++ b/app/views/work/index.html.erb
@@ -21,7 +21,7 @@
     </div>
     <div class='slide-title'>
       <%= link_to "www.businest.com", "https://businest.com", class: 'project-website-link slide-link' %>
-      <%= link_to "Next Project", "#section-two", class: 'next-portfolio-link slide-link scrollable-link', "data-speed": 1500 %>
+      <%= link_to "Next Project", "#section-two", class: 'next-portfolio-link slide-link scrollable-link' %>
     </div>
   </div>
   <div class='section-spacer one'>
@@ -49,7 +49,7 @@
     </div>
     <div class='slide-title'>
       <%= link_to "Sterling Vinyards Mobile App", "https://itunes.apple.com/au/app/sterling-vineyards/id1223207297?mt=8", class: 'project-website-link slide-link' %>
-      <%= link_to "Next Project", "#section-three", class: 'next-portfolio-link slide-link scrollable-link', "data-speed": 1500  %>
+      <%= link_to "Next Project", "#section-three", class: 'next-portfolio-link slide-link scrollable-link'  %>
     </div>
   </div>
   <div class='section-spacer two'>
@@ -71,7 +71,7 @@
     </div>
     <div class='slide-title'>
       <%= link_to "petrescue.com.au", "https://itunes.apple.com/au/app/sterling-vineyards/id1223207297?mt=8", class: 'project-website-link slide-link' %>
-      <%= link_to "Return to top", "#section-one", class: 'next-portfolio-link slide-link scrollable-link', "data-speed": 1500  %>
+      <%= link_to "Return to top", "#section-one", class: 'next-portfolio-link slide-link scrollable-link', "data-speed": 700  %>
     </div>
   </div>
   <div class='section-spacer three'>
