--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -1,12 +1,17 @@
 $red: #C72030
 
-=title-font
+=logo-font
   font-family: "Permanent Marker", serif
+
+=title-font
+  font-family: "Bitter", serif
+
+body *
+  font-family: "Lato", helvetica, sans-serif
 
 body
   margin: 0
   padding: 0
-  font-family: "Catamaran", helvetica, sans-serif
   background-color: white
   width: 100vw
   overflow-x: hidden
@@ -47,12 +52,13 @@ div#homepage
         display: none !important
 
   .main-title
-    +title-font
+    +logo-font
     font-size: 4em
     color: $red
     margin: 0 0 20px
-    text-shadow: 0px 1px 1px #000
+    padding: 0
     .subtitle
+      +title-font
       font-size: .5em
       display: block
     +mobile-mq
@@ -79,13 +85,14 @@ div#homepage
     .dashed-line.one
       width: 0
       position: fixed
-      border-width: 0 0 0 2px
+      border-width: 0 0 0 4px
       height: 100vh
       right: calc(20vw - 14px)
-      // right: calc(20vw + 1px)
+      +retina
+        right: calc(20vw + 1px)
       top: -80vh
       border-color: #333
-      border-style: solid
+      border-style: dashed
       display: block !important
       
     #spiderweb
@@ -100,13 +107,15 @@ div#homepage
       width: 300px
       position: fixed
       top: 5%
-      right: 7.5vw
       right: calc(20vw - 150px)
+      +retina
+        right: calc(20vw - 135px)
       z-index: 1
       +animation(bob 3s infinite ease-in-out)
       +mobile-mq
         width: 150px
         right: calc(20vw - 82px)
+
     .content-wrapper
       display: flex
       position: relative
@@ -128,7 +137,8 @@ div#homepage
       +mobile-mq
         min-height: 0
 
-
+    .dashed-line
+      border-color: black
     .dashed-line.one
       top: 0
       right: 20vw
@@ -167,6 +177,7 @@ div#homepage
       color: white
       text-align: center
       span 
+        font-family: inherit
         display: block
     article.about-me
       color: white
@@ -187,6 +198,7 @@ div#homepage
       p
         background-color: $red
         margin: 0 0 10px
+        line-height: 1.5em
     .about-me__icons
       .icon
         width: 50px
@@ -285,6 +297,111 @@ div#homepage
           margin-bottom: 3px
 
   #section-four
+    position: relative
+    background-color: #212121
+    .portfolio-slider
+      position: relative
+      .slick-arrow
+        position: absolute
+        top: 50%
+        margin-top: -25px
+        left: 30px
+        +button-black
+        width: 50px
+        height: 50px
+        z-index: 8
+        &.slick-prev
+          background: rgba(0,0,0,.5) image-url('arrow-prev.png') no-repeat 50%
+          background-size: 30px
+        &.slick-next
+          background: rgba(0,0,0,.5) image-url('arrow-next.png') no-repeat 50%
+          background-size: 30px
+          right: 30px
+          left: initial
+        &:hover
+          background-color: $red
+        +mobile-mq(768px)
+          display: none !important
+        &.slick-disabled
+          opacity: .2
+          background-color: rgba(0,0,0,.5)
+          +transform (scale(1))
+
+    .portfolio-slide
+      max-height: 100vh
+      box-sizing: border-box
+      padding: 10vh
+      display: flex
+      align-items: center
+      justify-content: space-around
+      img
+        max-height: 80vh
+        max-width: 80vw
+
+    .slide-title
+      display: flex
+      justify-content: space-between
+      position: absolute
+      bottom: 0
+      width: 100%
+      padding: 20px 30px
+      box-sizing: border-box
+      
+    .slide-link
+      +button
+      font-size: 1.2em
+      &.project-website-link
+        +button-black
+        padding-left: 40px
+        background-image: image-url('link-arrow.png') 
+        background-repeat: no-repeat 
+        background-position: 0 50%
+        background-size: 40px
+        font-size: 1.8em
+        text-align: center
+        display: inline-block
+        +mobile-mq(768px)
+          display: none
+      &.next-portfolio-link
+        +button-black
+        margin: 7px 0
+
+    .slick-dots
+      list-style: none
+      padding: 0
+      margin: 0
+      display: flex
+      align-items: center
+      justify-content: center
+      li
+        border-radius: 50%
+        display: flex
+        width: 20px
+        height: 20px
+        justify-content: center
+        align-items: center
+        background-color: black
+        border: 1px dashed #555
+        margin-left: 2px
+        button
+          +appearance(none)
+          outline: none !important
+          background: none
+          border: none
+          box-shadow: none
+          color: transparent
+          background-color: #555
+          width: 10px
+          height: 10px
+          +transition(background-color 10ms linear)
+          padding: 0
+          border-radius: 50%
+      li.slick-active 
+        border-color: #555
+        button
+          background-color: white
+
+  #section-five
     background: #333
     position: relative
     overflow: hidden
@@ -372,9 +489,10 @@ div#homepage
         line-height: 1em
         margin: 0
         border-bottom: 4px dashed #555
-        margin: 0 -25px 10px 0 // margin-right to reposition from padding
+        margin: 0 -25px 20px 0 // margin-right to reposition from padding
         padding: 0 25px 10px
         .subtitle
+          font-family: inherit
           padding-top: 10px
           font-size: .8em
           display: block
@@ -385,21 +503,28 @@ div#homepage
         margin: 0
         li a
           display: inline-block
-          line-height: 53px
+          line-height: 35px
+          margin-bottom: 10px
           color: white
           text-decoration: none
           font-size: 1.1em
           width: auto
-          padding-right: 60px
+          padding-right: 40px
           background: transparent image-url('social-icons.png') no-repeat 100% 0
-          background-size: 50px auto
+          background-size: 30px auto
           cursor: pointer
           &.linkedin
-            background-position: 100% -54px
+            background-position: 100% 0px
+            &:hover
+              background-position-y: -136px
           &.phone
-            background-position: 100% -108px
+            background-position: 100% -39px
+            &:hover
+              background-position-y: -175px
           &.email
-            background-position: 100% -162px
+            background-position: 100% -75px
+            &:hover
+              background-position-y: -211px
           &:hover, &:active
             color: $red
 nav.main
