--- a/app/assets/stylesheets/portfolio.sass
+++ b/app/assets/stylesheets/portfolio.sass
@@ -1,110 +1,111 @@
-#portfolio
-  .portfolio-section
-    position: relative
-  .portfolio-slider
-    position: relative
-    .slick-arrow
-      position: absolute
-      top: 50%
-      margin-top: -25px
-      left: 30px
-      +button-black
-      width: 50px
-      height: 50px
-      z-index: 8
-      &.slick-prev
-        background: rgba(0,0,0,.5) image-url('arrow-prev.png') no-repeat 50%
-        background-size: 30px
-      &.slick-next
-        background: rgba(0,0,0,.5) image-url('arrow-next.png') no-repeat 50%
-        background-size: 30px
-        right: 30px
-        left: initial
-      &:hover
-        background-color: $red
-      +mobile-mq(768px)
-        display: none !important
-      &.slick-disabled
-        opacity: .2
-        background-color: rgba(0,0,0,.5)
-        +transform (scale(1))
+.portfolio
+  height: 100vh
+  // .portfolio-slider
+  //   position: relative
+  //   .slick-arrow
+  //     position: absolute
+  //     top: 50%
+  //     margin-top: -25px
+  //     left: 30px
+  //     +button-black
+  //     width: 50px
+  //     height: 50px
+  //     z-index: 8
+  //     &.slick-prev
+  //       background: rgba(0,0,0,.5) image-url('arrow-prev.png') no-repeat 50%
+  //       background-size: 30px
+  //     &.slick-next
+  //       background: rgba(0,0,0,.5) image-url('arrow-next.png') no-repeat 50%
+  //       background-size: 30px
+  //       right: 30px
+  //       left: initial
+  //     &:hover
+  //       background-color: $red
+  //     +mobile-mq(768px)
+  //       display: none !important
+  //     &.slick-disabled
+  //       opacity: .2
+  //       background-color: rgba(0,0,0,.5)
+  //       +transform (scale(1))
 
-  .portfolio-slide
-    background-color: #333
-    height: 95vh
-    display: flex
-    align-items: center
-    justify-content: space-around
-    img
-      max-height: 90%
-      max-width: 100%
+  // .portfolio-slide
+  //   background-color: #333
+  //   max-height: 100vh
+  //   box-sizing: border-box
+  //   padding: 10vh
+  //   display: flex
+  //   align-items: center
+  //   justify-content: space-around
+  //   img
+  //     max-height: 90%
+  //     max-width: 100%
 
-  .slide-title
-    display: flex
-    justify-content: space-between
-    position: absolute
-    bottom: 0
-    width: 100%
-    padding: 20px 30px
-    box-sizing: border-box
+  // .slide-title
+  //   display: flex
+  //   justify-content: space-between
+  //   position: absolute
+  //   bottom: 0
+  //   width: 100%
+  //   padding: 20px 30px
+  //   box-sizing: border-box
     
-  .slide-link
-    +button
-    font-size: 1.2em
-    &.project-website-link
-      +button-black
-      padding-left: 40px
-      background-image: image-url('link-arrow.png') 
-      background-repeat: no-repeat 
-      background-position: 0 50%
-      background-size: 40px
-      font-size: 1.8em
-      text-align: center
-      display: inline-block
-      +mobile-mq(768px)
-        display: none
-    &.next-portfolio-link
-      +button-black
-      margin: 7px 0
+  // .slide-link
+  //   +button
+  //   font-size: 1.2em
+  //   &.project-website-link
+  //     +button-black
+  //     padding-left: 40px
+  //     background-image: image-url('link-arrow.png') 
+  //     background-repeat: no-repeat 
+  //     background-position: 0 50%
+  //     background-size: 40px
+  //     font-size: 1.8em
+  //     text-align: center
+  //     display: inline-block
+  //     +mobile-mq(768px)
+  //       display: none
+  //   &.next-portfolio-link
+  //     +button-black
+  //     margin: 7px 0
 
-  .slick-dots
-    position: absolute
-    bottom: 2%
-    list-style: none
-    padding: 0
-    margin: 0
-    display: flex
-    align-items: center
-    justify-content: center
-    width: 100px
-    left: 50%
-    margin-bottom: 22px
-    +mobile-mq(768px)
-      position: initial
-      margin-bottom: 0
-    li
-      border-radius: 50%
-      background-color:  rgba(0,0,0,.5)
-      display: flex
-      width: 20px
-      height: 20px
-      justify-content: center
-      align-items: center
-      button
-        +appearance(none)
-        outline: none !important
-        background: none
-        border: none
-        box-shadow: none
-        color: transparent
-        background-color: transparent
-        width: 10px
-        height: 10px
-        +transition(background-color 10ms linear)
-        padding: 0
-        border-radius: 50%
-    li.slick-active button
-      background-color: white
+  // .slick-dots
+  //   position: absolute
+  //   bottom: 2%
+  //   list-style: none
+  //   padding: 0
+  //   margin: 0
+  //   display: flex
+  //   align-items: center
+  //   justify-content: center
+  //   width: 100px
+  //   left: 50%
+  //   margin-bottom: 22px
+  //   +mobile-mq(768px)
+  //     position: initial
+  //     margin-bottom: 0
+  //   li
+  //     border-radius: 50%
+  //     background-color:  rgba(0,0,0,.5)
+  //     display: flex
+  //     width: 20px
+  //     height: 20px
+  //     justify-content: center
+  //     align-items: center
+  //     button
+  //       +appearance(none)
+  //       outline: none !important
+  //       background: none
+  //       border: none
+  //       box-shadow: none
+  //       color: transparent
+  //       background-color: transparent
+  //       width: 10px
+  //       height: 10px
+  //       +transition(background-color 10ms linear)
+  //       padding: 0
+  //       border-radius: 50%
+  //   li.slick-active button
+  //     background-color: white
   
   .section-spacer
     $spacer-height: 250px
