--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -67,6 +67,7 @@
   </section>
 
   <section id="section-four" class="homepage-section portfolio">
+    <div class='dashed-line one'></div>
     <div class='portfolio-section'>
       <div class='portfolio-slider'>
         <div class='portfolio-slide businest' data-name='Businest' data-href='https://businest.com'>
@@ -115,6 +116,7 @@
           <%= image_tag('petrescue-d.jpg') %>
         </div>
       </div>
+      <div class="swipe-icon"></div>
       <div class='slide-title'>
         <%= link_to "Businest", "https://businest.com", class: 'project-website-link slide-link' %>
       </div>
