--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,16 +28,12 @@
       </div>
     <div class="content-wrapper">
       <article class='about-me'>
-        <h3>About me</h3>
-        <p>I am an 8 year veteran in web design & development. I have a bachelor of visual communication from the University of South Australia. I enjoy writing beautiful code as much as I love crafting elegant designs. I have worked with some of Australia's biggest corporations, including the ABC and Qantas.</p>
-        <p>I'm very passionate about animal rights and social liberties. In my spare time I dig travel, motorcycle riding, surfing, photography, camping, yoga, volleyball, & lots of other stuff.</p>
-        <div class='about-me__icons'>
-          <div class='icon travel'></div>
-          <div class='icon motorcycle'></div>
-          <div class='icon yoga'></div>
-          <div class='icon photography'></div>
-          <div class='icon volleyball'></div>
+        <div class='copy'>
+          <h3>About me</h3>
+          <p>I am an 8 year veteran in web design & development. I have a bachelor of visual communication from the University of South Australia. I enjoy writing beautiful code as much as I love crafting elegant designs. I have worked with some of Australia's biggest corporations, including the ABC and Qantas.</p>
+          <p>I'm very passionate about animal rights and social liberties. In my spare time I dig travel, motorcycle riding, surfing, photography, camping, yoga, volleyball, & lots of other stuff.</p>
         </div>
+        <%= image_tag 'about-me-icons.png', class: 'about-me__icons' %>
       </article>
     </div>
   </section>
@@ -52,14 +48,15 @@
           <span>( But are not limited to )</span>
         </h3>
         <ul>
-          <li><span>HTML5</span>( incl. HAML, erb, slim and more )</li>
-          <li><span>CSS3</span>( incl. SASS, SCSS & LESS and more )</li>
-          <li><span>Javascript</span>( Vanilla & JQuery )</li>
-          <li><span>Ruby & Rails</span>( Front-end focus )</li>
-          <li><span>Graphic Design</span></li>
-          <li><span>UX Design</span></li>
+          <li><span>HTML5</span><em>/</em>HAML, SLIM and more</li>
+          <li><span>CSS3</span><em>/</em>SASS, LESS and more</li>
+          <li><span>Javascript</span><em>/</em>Vanilla, JQuery</li>
+          <li><span>Ruby & Rails</span><em>/</em>Front-end focus</li>
+          <li><span>Graphic Design</span><em>/</em>Adobe Creative Suite</li>
+          <li><span>UX Design</span><em>/</em>Redpen, UXPin</li>
+          <li><span>Illustration</span><em>/</em>Procreate</li>
           <li><span>Photography</span></li>
-          <li><span>Illustration</span></li>
+          
         </ul>
       </div>
       
